# MemR

./: pyproject.toml
memr/: __main__.py  config.py  server.py  types.py
memr/lens/: capture.py  compact.py  recall.py  registry.py  search.py
memr/memr/: config.py  lifecycle.py  server.py  types.py
memr/memr/lens/: capture.py  compact.py  recall.py  registry.py  search.py
memr/memr/relay/: agent.py  budget.py  planner.py
memr/memr/snapshot/: compactor.py  loader.py  parser.py  writer.py
memr/memr/tokens/: counter.py  truncator.py
memr/memr/trace/: langsmith.py  langwatch.py
memr/memr/vault/: auto.py  tools_auto.py
memr/relay/: agent.py  planner.py
memr/snapshot/: loader.py  parser.py  writer.py
memr/tokens/: counter.py  truncator.py
memr/trace/: emitter.py  langsmith.py  langwatch.py
memr/vault/: context.py  manager.py
