[project]
name = "memr"
version = "1.0.0"
description = "Memory Relay — persistent, token-efficient shared memory for AI agents"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
langsmith = ["langsmith>=0.1.0"]
langwatch = ["langwatch>=0.1.0"]

[project.scripts]
memr = "memr.__main__:entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memr"]